--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -97,53 +97,48 @@
 @import url(../lib/mmenu/jquery.mmenu.all.css);
 
 /*===== Layout Style =====*/
-body {}
-
-a { color: #252525; cursor: pointer; }
-a:hover,
-a:focus {
-  color: #707070;
-  /*text-decoration: none;*/
-  transition: all 0.25s;
+html {
+  height: 100%;
 }
-
 img {
   max-width: 100%;
   height: auto;
-  margin: 0 auto;
 }
-
-select:focus, button:focus, input:focus { outline: none; }
-input[type="text"],
-input[type="email"],
-input[type="url"],
-input[type="password"],
-input[type="search"],
-textarea, select, input[type="number"],
-input[type="tel"] {
-  padding: 8px 10px;
-  width: 100%;
-  border: none;
-  cursor: pointer;
-}
-
 ul,
 ol {
   margin: 0;
   padding: 0;
 }
-
 ul li,
 ol li {
   list-style: none;
 }
-
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   font-size: inherit;
 }
 .clearfix {
   clear: both;
+}
+body {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  min-height: 100vh;
+  -ms-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+}
+#main {
+  width: 100%;
+  min-height: calc(100vh - 103px);
+  -webkit-flex: 1 1 auto;
+  -moz-flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  -o-flex: 1 1 auto;
+  flex: 1 1 auto;
 }
 .block {
   margin-bottom: 10px;
@@ -250,7 +245,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 0px;
 }
 
-.sticky-wrapper.is-sticky .block-header-fixed {
+.hidedesktop.is-sticky .block-header-fixed {
   z-index: 99;
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
@@ -386,7 +381,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
 }
 
-/* Section Why Trade Us */
+/*===== Section Why Trade Us =====*/
 .block-whytrade .block-content {
   padding: 30px 0;
 }
@@ -395,6 +390,28 @@ h1, h2, h3, h4, h5, h6 {
 }
 .block-whytrade img {
   width: 100%;
+}
+
+/*===== Section Why Trade Us =====*/
+.block-comment .owl-dots {
+  text-align: center;
+  -webkit-tap-highlight-color: transparent;
+  width: 100%;
+  margin-top: 10px;
+}
+.block-comment .owl-dots .owl-dot {
+  display: inline-block;
+  width: 15px;
+  height: 5px;
+  margin: 5px 7px;
+  background: #D6D6D6;
+  transition: opacity 200ms ease;
+  border-radius: 5px;
+  text-indent: 99999999px;
+}
+.block-comment .owl-dots .owl-dot:hover,
+.block-comment .owl-dots .owl-dot.active {
+  background: #6BBD45;
 }
 
 /*===== Section News Home =====*/
@@ -482,4 +499,51 @@ footer .block-social i {
 
 .td-scroll-up:focus {
   text-decoration: none;
+}
+
+/*===== Page About =====*/
+.block-page-about ul {
+  margin-top: 0;
+  margin-bottom: 10px;
+  padding-left: 40px
+}
+.block-page-about ul li {
+  list-style-type: disc;
+}
+
+.block-page-about,
+.block-page-news,
+.block-page-download,
+.block-page-contact {
+  padding: 60px 0;
+}
+
+/*===== Block Page Download =====*/
+.block-page-download h2 {
+  font-size: 24px;
+  text-align: center;
+  font-weight: bold;
+  color: #FF0000;
+}
+
+/*===== Block App =====*/
+.block-page-download .block-title {
+  color: #FF0000;
+  font-weight: bold;
+  font-size: 24px;
+  margin-bottom: 50px;
+}
+.block-page-download .img {
+  margin-bottom: 20px;
+}
+.block-page-download .txt {
+  color: #FF0000;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+/*===== Block News Detail =====*/
+.block-news-detail h2 {
+  font-size: 18px;
+  font-weight: 600;
 }
