--- a/frontend/css/responsive.css
+++ b/frontend/css/responsive.css
@@ -14,7 +14,19 @@
 ------------------------*/
 
 /*----------------
-[Styles for devices min 1250px
+[Styles for devices min 767px
+*/
+@media (max-width: 991px) and (min-width: 767px) {
+	.block-header-desktop ul {
+		padding-left: 100px;
+	}
+	.block-header-desktop .navbar-nav>li>a {
+		padding: 0px 10px;
+	}
+}
+
+/*----------------
+[Styles for devices min 767px
 */
 @media (max-width: 767px) {
   	.block-header-mobile {
