--- a/frontend/sass/base/_common.scss
+++ b/frontend/sass/base/_common.scss
@@ -58,3 +58,20 @@
 .block-page-contact {
   padding: 60px 0;
 }
+/*----------------
+[Styles for devices min 767px
+*/
+@media (max-width: 767px) {
+  .hidedesktop {
+    display: none;
+  }
+  #main {
+    padding-top: 60px;
+  }
+  .block-page-about,
+  .block-page-news,
+  .block-page-download,
+  .block-page-contact {
+    padding: 15px 0;
+	}
+}
