--- a/backend/sass/pages/_index.scss
+++ b/backend/sass/pages/_index.scss
@@ -263,3 +263,38 @@
     overflow: hidden;
   }
 }
+
+@media (max-width: 767px) {
+  .block-new-form-top {
+    & .col-sm-4 {
+      margin-top: 5px;
+    }
+  }
+  .new-form-bottom {
+    & .col-sm-4 {
+      width: calc(100% - 30px);
+    }
+  }
+  .block-sell,
+  .block-chart {
+    margin-bottom: 10px;
+  }
+  .block-new-form-top {
+    & .col-sm-4 {
+      & .row {
+        margin-left: 0px;
+        margin-right: 0px;
+      }
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .new-form-bottom {
+    & .new-form-content {
+      & span {
+        font-size: 20px;
+      }
+    }
+  }
+}
