--- a/frontend/sass/pages/news.scss
+++ b/frontend/sass/pages/news.scss
@@ -1,5 +1,7 @@
 /*===== Block News Detail =====*/
-.block-news-detail h2 {
-  font-size: 18px;
-  font-weight: 600;
+.block-news-detail {
+  h2 {
+  	font-size: 18px;
+  	font-weight: 600;
+  }
 }
