--- a/frontend/sass/style.scss
+++ b/frontend/sass/style.scss
@@ -2,6 +2,7 @@
 /*****BASE*****/
 @import "base/reset";
 @import "base/common";
+@import "base/mixins";
 /*****LAYOUT*****/
 @import "layout/header";
 @import "layout/footer";
