--- a/backend/sass/pages/_index.scss
+++ b/backend/sass/pages/_index.scss
@@ -223,6 +223,9 @@
     background: -moz-linear-gradient(center bottom, #39cccc 0, #7adddd 100%) !important;
     background: -o-linear-gradient(#7adddd, #39cccc) !important;
   }
+  & #line-chart {
+    height: 250px;
+  }
   & .box-footer {
     border: 3px solid #D6712B!important;
     padding: 0px;
