--- a/frontend/sass/base/_common.scss
+++ b/frontend/sass/base/_common.scss
@@ -1,9 +1,7 @@
 .hidedesktop.is-sticky .block-header-fixed {
 	z-index: 99;
-	-webkit-transition: 0.3s;
-	-o-transition: 0.3s;
-	transition: 0.3s;
-	box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.12);
+	@include transition(.3s);
+	@include box-shadow(0 1px 4px 0 rgba(0, 0, 0, 0.12));
 }
 /*===== Back To Top =====*/
 .td-scroll-up {
@@ -11,27 +9,18 @@
 	position: fixed;
 	bottom: 4px;
 	right: 5px;
-	width: 40px;
-	height: 40px;
-	border-radius: 3px;
+	@include size(40px,40px);
+	@include border-radius(3px);
+	@include translate3d(0, 70px, 0);
 	background-color: #d9534f;
 	border-color: #d43f3a;
 	z-index: 1;
-	transform: translate3d(0, 70px, 0);
-	-webkit-transform: translate3d(0, 70px, 0);
-	-moz-transform: translate3d(0, 70px, 0);
-	-ms-transform: translate3d(0, 70px, 0);
-	-o-transform: translate3d(0, 70px, 0);
 	-webkit-transition: transform 0.4s cubic-bezier(0.55, 0, 0.1, 1) 0s;
 	-moz-transition: transform 0.4s cubic-bezier(0.55, 0, 0.1, 1) 0s;
 	-o-transition: transform 0.4s cubic-bezier(0.55, 0, 0.1, 1) 0s;
 	transition: transform 0.4s cubic-bezier(0.55, 0, 0.1, 1) 0s;
 	&.td-scroll-up-visible {
-		transform: translate3d(0, 0, 0);
-		-webkit-transform: translate3d(0, 0, 0);
-		-moz-transform: translate3d(0, 0, 0);
-		-ms-transform: translate3d(0, 0, 0);
-		-o-transform: translate3d(0, 0, 0);
+		@include translate3d(0, 0, 0);
 	}
 	& i {
 		position: relative;
@@ -44,9 +33,7 @@
 	}
 	&:hover {
 		text-decoration: none;
-		-webkit-transition: all 0.3s;
-		-moz-transition: all 0.3s;
-		transition: all 0.3s;
+		@include transition(all .3s);
 	}
 	&:focus {
 		text-decoration: none;
@@ -59,7 +46,7 @@
   padding: 60px 0;
 }
 /*----------------
-[Styles for devices min 767px
+[Styles for devices max 767px
 */
 @media (max-width: 767px) {
   .hidedesktop {
