--- a/frontend/sass/pages/content.scss
+++ b/frontend/sass/pages/content.scss
@@ -1,8 +1,10 @@
 /*===== Page About =====*/
-.block-page-about ul {
-  margin-top: 0;
-  margin-bottom: 10px;
-  padding-left: 40px;
+.block-page-about {
+  ul {
+  	margin-top: 0;
+  	margin-bottom: 10px;
+ 	 padding-left: 40px;
+  }
   & li {
   	list-style-type: disc;
   }
