--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,81 +1,2 @@
-/*
-Error: Undefined mixin 'transition'.
-        on line 3 of D:/Work/xampp/htdocs/www/businessbnc/frontend/sass/base/_common.scss, in `transition'
-        from line 3 of D:/Work/xampp/htdocs/www/businessbnc/frontend/sass/base/_common.scss
-        from line 4 of D:\Work\xampp\htdocs\www\businessbnc\frontend\sass\style.scss
-
-1: @charset "utf-8";
-2: /*****BASE*****\/
-3: @import "base/reset";
-4: @import "base/common";
-5: @import "base/mixins";
-6: /*****LAYOUT*****\/
-7: @import "layout/header";
-8: @import "layout/footer";
-
-Backtrace:
-D:/Work/xampp/htdocs/www/businessbnc/frontend/sass/base/_common.scss:3:in `transition'
-D:/Work/xampp/htdocs/www/businessbnc/frontend/sass/base/_common.scss:3
-D:\Work\xampp\htdocs\www\businessbnc\frontend\sass\style.scss:4
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:352:in `block in visit_mixin'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:98:in `block in with_mixin'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:135:in `with_frame'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:98:in `with_mixin'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:350:in `visit_mixin'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `visit'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `block in with_base'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:135:in `with_frame'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `with_base'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `visit'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:444:in `block (2 levels) in visit_rule'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:444:in `map'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:444:in `block in visit_rule'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:442:in `visit_rule'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `visit'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `block in with_base'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:135:in `with_frame'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `with_base'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `visit'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:329:in `block (2 levels) in visit_import'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:329:in `map'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:329:in `block in visit_import'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:88:in `block in with_import'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:135:in `with_frame'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:88:in `with_import'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:326:in `visit_import'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `visit'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `block in with_base'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:135:in `with_frame'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `with_base'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `visit'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:52:in `map'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:171:in `block in visit_children'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:170:in `visit_children'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:190:in `visit_root'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `visit'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:161:in `visit'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:10:in `visit'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/root_node.rb:36:in `css_tree'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:389:in `_render_with_sourcemap'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:307:in `render_with_sourcemap'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/sass_scss.rb:391:in `run'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/sass_scss.rb:63:in `process_result'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/base.rb:52:in `parse'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/base.rb:19:in `parse!'
-D:/SETUP_EXE/Koala/rubygems/gems/sass-3.5.2/bin/sass:13:in `<top (required)>'
-D:/SETUP_EXE/Koala/bin/sass:22:in `load'
-D:/SETUP_EXE/Koala/bin/sass:22:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Undefined mixin 'transition'.\A         on line 3 of D:/Work/xampp/htdocs/www/businessbnc/frontend/sass/base/_common.scss, in `transition'\A         from line 3 of D:/Work/xampp/htdocs/www/businessbnc/frontend/sass/base/_common.scss\A         from line 4 of D:\Work\xampp\htdocs\www\businessbnc\frontend\sass\style.scss\A \A 1: @charset \"utf-8\";\A 2: /*****BASE*****/\A 3: @import \"base/reset\";\A 4: @import \"base/common\";\A 5: @import \"base/mixins\";\A 6: /*****LAYOUT*****/\A 7: @import \"layout/header\";\A 8: @import \"layout/footer\";"; }
+@import url(../lib/bootstrap/bootstrap.min.css);@import url(../lib/carousel/owl.carousel.min.css);@import url(../lib/awesome/font-awesome.min.css);@import url(../lib/animate/animate.min.css);@import url(../lib/mmenu/jquery.mmenu.all.css);html{height:100%}img{max-width:100%;height:auto}ul,ol{margin:0;padding:0}ul li,ol li{list-style:none}h1,h2,h3,h4,h5,h6{margin:0;font-size:inherit}.clearfix{clear:both}body{display:-webkit-flex;display:-moz-flex;display:-ms-flex;display:-o-flex;display:flex;min-height:100vh;-ms-flex-direction:column;-webkit-flex-direction:column;flex-direction:column}#main{width:100%;min-height:calc(100vh - 103px);-webkit-flex:1 1 auto;-moz-flex:1 1 auto;-ms-flex:1 1 auto;-o-flex:1 1 auto;flex:1 1 auto}.block{margin-bottom:10px}.block:before,.block:after{content:"";display:table}.block:after{clear:both}.wrapper{display:block;position:relative;overflow:hidden}.hidedesktop.is-sticky .block-header-fixed{z-index:99;transition:all .3s linear;-webkit-transition:all .3s linear;-moz-transition:all .3s linear;box-shadow:0 1px 4px 0 rgba(0,0,0,0.12);-webkit-box-shadow:0 1px 4px 0 rgba(0,0,0,0.12);-moz-box-shadow:0 1px 4px 0 rgba(0,0,0,0.12)}.td-scroll-up{cursor:pointer;position:fixed;bottom:4px;right:5px;width:40px;height:40px;border-radius:3px;-webkit-border-radius:3px;-moz-border-radius:3px;-webkit-transform:translate3d(0, 70px, 0);-moz-transform:translate3d(0, 70px, 0);-o-transform:translate3d(0, 70px, 0);transform:translate3d(0, 70px, 0);background-color:#d9534f;border-color:#d43f3a;z-index:1;-webkit-transition:transform 0.4s cubic-bezier(0.55, 0, 0.1, 1) 0s;-moz-transition:transform 0.4s cubic-bezier(0.55, 0, 0.1, 1) 0s;-o-transition:transform 0.4s cubic-bezier(0.55, 0, 0.1, 1) 0s;transition:transform 0.4s cubic-bezier(0.55, 0, 0.1, 1) 0s}.td-scroll-up.td-scroll-up-visible{-webkit-transform:translate3d(0, 0, 0);-moz-transform:translate3d(0, 0, 0);-o-transform:translate3d(0, 0, 0);transform:translate3d(0, 0, 0)}.td-scroll-up i{position:relative;color:#fff;font-size:20px;display:block;text-align:center;width:40px;top:7px}.td-scroll-up:hover{text-decoration:none;transition:all .3s linear;-webkit-transition:all .3s linear;-moz-transition:all .3s linear}.td-scroll-up:focus{text-decoration:none}.block-page-about,.block-page-news,.block-page-download,.block-page-contact{padding:60px 0}@media (max-width: 767px){.hidedesktop{display:none}#main{padding-top:60px}.block-page-about,.block-page-news,.block-page-download,.block-page-contact{padding:15px 0}}.block-header-mobile{float:left;background:#fff;display:none;margin-left:10px;border-radius:5px;-webkit-border-radius:5px;-moz-border-radius:5px}.block-header-mobile .mmmenua{background:center center no-repeat transparent;display:block;width:40px;height:40px;position:relative;top:0;left:0px;text-align:center;z-index:1000}.block-header-mobile .mmmenua i{font-size:25px;color:#009EBB;padding-top:8px}.block-header-desktop{background:#FF0000;padding:20px 0px;position:static;top:-100px}.block-header-desktop .container{position:relative}.block-header-desktop .navbar-nav{padding:0px;margin:0px;text-align:center;list-style:none;float:initial}.block-header-desktop .navbar-nav>li{float:initial;display:inline-block}.block-header-desktop .navbar-nav>li>a{padding:0px 30px;color:#fff}.logo,.title-logo{display:table-cell;vertical-align:middle}.logo-header{position:absolute;left:0px;top:-15px;z-index:999}.logo-header img{height:50px}.logo-header .title-logo p{margin:0px;font-size:15px;color:#fff;font-weight:600;margin-left:10px}.login-member{position:absolute;right:70px}.login-member a{padding:5px 15px;background:#2ECC71;color:#fff;border-radius:5px}.language{position:absolute;top:-2px;right:0px}@media (max-width: 991px) and (min-width: 767px){.block-header-desktop .navbar-nav{padding-left:100px}.block-header-desktop .navbar-nav>li>a{padding:0px 10px}}@media (max-width: 767px){.block-header-mobile{display:block}.block-header-desktop{display:none}.logo-header{position:absolute;left:60px;top:0px}.language{top:7px;right:10px}}footer{padding:10px 0px;background:#22313F;color:#fff;text-align:right}footer .nav-link-footer li{display:inline-block;margin:0 10px}footer a{color:#fff}footer a:hover{color:#fff}footer .block-social a i{font-size:18px;margin:0px 15px;margin-top:3px}footer .block-social a:hover{text-decoration:none}@media (min-width: 768px) and (max-width: 991px){footer{text-align:left;font-size:12px}footer .nav-link-footer li{float:left;margin:0 3px}footer a{font-size:11px}footer .block-social a i{font-size:14px}}@media (max-width: 767px){footer{text-align:left}footer .nav-link-footer li{float:left}}.block-title .title-sec{font-size:20px;font-weight:600;text-transform:uppercase;color:#276271;margin-bottom:10px}.block-slider{position:relative;overflow:hidden}.block-slider .owl-carousel .owl-nav .owl-next,.block-slider .owl-carousel .owl-nav .owl-prev{position:absolute;top:50%;-webkit-transform:translate(0, -50%);-ms-transform:translate(0, -50%);transform:translate(0, -50%);width:32px;height:32px;text-align:center;background:#6C6A6A;border-radius:100%}.block-slider .owl-carousel .owl-nav .owl-next i,.block-slider .owl-carousel .owl-nav .owl-prev i{color:#fff;line-height:30px;font-size:20px}.block-slider .owl-carousel .owl-nav .owl-next{right:-40px;opacity:0;visibility:hidden;-webkit-transition:0.3s;-o-transition:0.3s;transition:0.3s}.block-slider .owl-carousel .owl-nav .owl-prev{left:-40px;opacity:0;visibility:hidden;-webkit-transition:0.3s;-o-transition:0.3s;transition:0.3s}.block-slider:hover .owl-carousel .owl-nav .owl-next{right:10px;opacity:1;visibility:visible;-webkit-transition:0.3s;-o-transition:0.3s;transition:0.3s}.block-slider:hover .owl-carousel .owl-nav .owl-prev{left:10px;opacity:1;visibility:visible;-webkit-transition:0.3s;-o-transition:0.3s;transition:0.3s}.block-slider .owl-dots{position:absolute;right:0;bottom:0;left:0;text-align:center}.block-slider .owl-dots .owl-dot{display:inline-block;background:#666;text-indent:-9999px;width:10px;height:10px;margin:0 5px;outline:0;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px}.block-slider .owl-dots:hover,.block-slider .owl-dots.active{background:#fff}.block-parallax{background-attachment:fixed;background-position:center;background-repeat:no-repeat;background-size:cover;position:relative;display:table;width:100%}.block-aboutus .block-parallax-img{background-image:url(../images/parallax/meta-trader-4-standard-1501992848-1508778680.jpg)}.block-aboutus .block-content{background:rgba(0,0,0,0.5);padding:10px 0}.block-aboutus .block-content p{margin-bottom:10px;color:#fff}.block-aboutus .block-content ul{margin-top:0;margin-bottom:10px;padding-left:40px}.block-aboutus .block-content ul li{list-style-type:disc;color:#fff}.block-whytrade .block-content{padding:30px 0}.block-whytrade .block-parallax-img{background-image:url(../images/parallax/background-home-1508779221.jpg)}.block-whytrade img{width:100%}.block-comment .owl-dots{text-align:center;-webkit-tap-highlight-color:transparent;width:100%;margin-top:10px}.block-comment .owl-dots .owl-dot{display:inline-block;width:15px;height:5px;margin:5px 7px;background:#D6D6D6;transition:opacity 200ms ease;border-radius:5px;text-indent:99999999px}.block-comment .owl-dots .owl-dot:hover,.block-comment .owl-dots .owl-dot.active{background:#6BBD45}.news-home{margin-bottom:20px}.news-home:nth-child(2n+1){clear:both}.news-home h2{font-size:15px;margin:5px 0px;font-weight:600;color:#333}.block-page-about ul{margin-top:0;margin-bottom:10px;padding-left:40px}.block-page-about li{list-style-type:disc}.block-news-detail h2{font-size:18px;font-weight:600}.block-page-download .block-title{color:#FF0000;font-weight:bold;text-align:center;font-size:24px;margin-bottom:50px}.block-page-download .img{margin-bottom:20px}.block-page-download .txt{color:#FF0000;font-weight:bold;font-size:24px}
+/*# sourceMappingURL=style.css.map */
