--- a/frontend/sass/style.scss
+++ b/frontend/sass/style.scss
@@ -1,8 +1,9 @@
 @charset "utf-8";
+/*****HELPERS*****/
+@import "helpers/_mixins.scss";
 /*****BASE*****/
 @import "base/reset";
 @import "base/common";
-@import "base/mixins";
 /*****LAYOUT*****/
 @import "layout/header";
 @import "layout/footer";
