--- a/backend/sass/pages/_login.scss
+++ b/backend/sass/pages/_login.scss
@@ -18,24 +18,15 @@ body.login {
 }
 /* Page Login */
 .signin_wrapper {
-  background: url(../img/lock.jpg);
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  height: 100%;
-  width: 100%;
+  background: url("../img/lock.jpg") no-repeat 50% 50% /cover;
+  @include size(100%,100%);
   position: fixed;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-position: 50% 50% !important;
   & .block-side-right {
     position: fixed;
-    width: 535px;
+    @include size(535px,100%);
     right: 0;
     background: rgba(0, 9, 22, 0.8);
     padding: 0px 40px;
-    height: 100%;
     overflow-y: auto;
     overflow-x: hidden;
   }
@@ -83,11 +74,7 @@ body.login {
     position: absolute;
     width: 3rem;
     font-size: 2rem;
-    -webkit-transition: color 0.2s;
-    -moz-transition: color 0.2s;
-    -o-transition: color 0.2s;
-    -ms-transition: color 0.2s;
-    transition: color 0.2s;
+    @include transition(color, 0.2s);
     color: #ffffff;
     backface-visibility: hidden;
     font-size: 30px;
@@ -110,32 +97,23 @@ body.login {
     border: none;
     border-bottom: 1px solid #9e9e9e;
     outline: none;
-    height: 43px;
-    width: 100%;
+    @include size(100%,43px);
+    // @include box-shadow(none);
+    @include box-sizing(content-box);
+    @include transition(all, .3s);
     font-size: 14px;
     margin: 0 0 15px 0;
     padding: 0;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-    -webkit-transition: 0.3s;
-    -moz-transition: 0.3s;
-    -o-transition: 0.3s;
-    -ms-transition: 0.3s;
-    transition: 0.3s;
     &:focus {
       border-bottom: 1px solid #2196f3;
-      box-shadow: 0 1px 0 0 #2196f3;
+      @include box-shadow(0, 1px, 0, 0 #2196f3);
       & + label {
         color: #fff;
       }
     }
     &.valid {
       border-bottom: 1px solid #6fd64b;
-      box-shadow: 0 1px 0 0 #6fd64b;
+      @include box-shadow(0, 1px, 0, 0 #6fd64b);
     }
   }
 }
@@ -163,7 +141,7 @@ body.login {
       margin-bottom: 20px;
       background-color: #2196f3;
       border: 1px solid transparent;
-      border-radius: 0;
+      @include border-radius(0);
     }
   }
 }
@@ -212,27 +190,18 @@ body.login {
       border: none;
       border-bottom: 1px solid #9e9e9e;
       outline: none;
+      @include border-radius(0);
+      // @include box-shadow(none);
+      @include box-sizing(content-box);
+      @include transition(all, .3s);
       height: 3rem;
       width: 100%;
       font-size: 1rem;
       margin: 0 0 15px 0;
       padding: 0;
-      -webkit-box-shadow: none;
-      -moz-box-shadow: none;
-      box-shadow: none;
-      -webkit-box-sizing: content-box;
-      -moz-box-sizing: content-box;
-      box-sizing: content-box;
-      -webkit-transition: 0.3s;
-      -moz-transition: 0.3s;
-      -o-transition: 0.3s;
-      -ms-transition: 0.3s;
-      transition: 0.3s;
       &:focus {
         border-bottom: 1px solid #26a69a;
-        -webkit-box-shadow: 0 1px 0 0 #26a69a;
-        -moz-box-shadow: 0 1px 0 0 #26a69a;
-        box-shadow: 0 1px 0 0 #26a69a;
+        @include box-shadow(0, 1px, 0, 0 #26a69a);
       }
     }
     &.btn-red {
@@ -247,7 +216,7 @@ body.login {
       margin-left: 5px;
       margin-top: 0;
       color: #fff;
-      border-radius: 3px;
+      @include border-radius(3px);
       background-color: #2196f3;
       border: 1px solid transparent;
     }
