--- a/backend/sass/pages/_member.scss
+++ b/backend/sass/pages/_member.scss
@@ -5,18 +5,14 @@
     padding: 0;
     padding-top: 20px;
     position: relative;
-    transition: all 0.5s;
-    -webkit-transition: all 0.5s;
-    -moz-transition: all 0.5s;
+    @include transition(all, 0.5s);
     margin-top: -5px;
     & li {
       text-align: center;
       list-style-type: none;
       position: relative;
       padding: 25px 0 0 0;
-      transition: all 0.5s;
-      -webkit-transition: all 0.5s;
-      -moz-transition: all 0.5s;
+      @include transition(all, 0.5s);
     }
     & a {
       padding: 5px 10px;
@@ -25,12 +21,8 @@
       font-family: arial, verdana, tahoma;
       font-size: 11px;
       display: inline-block;
-      border-radius: 5px;
-      -webkit-border-radius: 5px;
-      -moz-border-radius: 5px;
-      transition: all 0.5s;
-      -webkit-transition: all 0.5s;
-      -moz-transition: all 0.5s;
+      @include transition(all, 0.5s);
+      @include border-radius(5px);
       & img {
         height: 40px;
       }
@@ -64,18 +56,13 @@
     top: -150px;
     left: -90px;
     width: 300px;
-    border-radius: 4px;
+    @include border-radius(4px);
+    @include translate(0, 0);
+    @include transition(all, .3s);
+    @include opacity(0);
     background: linear-gradient(to bottom, #333 10%, #333 100%);
     z-index: 9;
-    opacity: 0;
     visibility: hidden;
-    -webkit-transform: translate(0, 0px);
-    -ms-transform: translate(0, 0px);
-    -o-transform: translate(0, 0px);
-    transform: translate(0, 0px);
-    -webkit-transition: 0.3s;
-    -o-transition: 0.3s;
-    transition: 0.3s;
   }
   & .ShowDetailAccHome {
     & .titleAcc {
@@ -85,10 +72,9 @@
       text-transform: uppercase;
       font-size: 13px;
       font-weight: bold;
-      height: 30px;
       line-height: 28px;
       text-align: center;
-      width: 100%;
+      @include size(100%,30px);
     }
     & .bodyAcc {
       width: 100%;
@@ -130,13 +116,8 @@
       top: -130px;
       opacity: 1;
       visibility: visible;
-      -webkit-transform: translate(0, 0px);
-      -ms-transform: translate(0, 0px);
-      -o-transform: translate(0, 0px);
-      transform: translate(0, 0px);
-      -webkit-transition: 0.3s;
-      -o-transition: 0.3s;
-      transition: 0.3s;
+      @include translate(0,0);
+      @include transition(all, .3s);
     }
   }
   & .block-addmemer {
@@ -146,8 +127,7 @@
       top: 5px;
       left: 50%;
       border-left: 1px dotted #333;
-      width: 0;
-      height: 20px;
+      @incude size(0,20px);
     }
     & .block-modal-addMember {
       float: left;
@@ -159,8 +139,7 @@
         top: 5px;
         right: 50%;
         border-top: 1px dotted #333;
-        width: 50%;
-        height: 20px;
+        @include size(50%,20px);
       }
       &:first-child:before,
       &:last-child:after {
@@ -172,15 +151,11 @@
         border-left: 1px dotted #333;
       }
       &:first-child::after {
-        border-radius: 5px 0 0 0;
-        -webkit-border-radius: 5px 0 0 0;
-        -moz-border-radius: 5px 0 0 0;
+        @include border-radius(5px 0 0 0);
       }
       &:last-child::before {
         border-right: 1px dotted #333;
-        border-radius: 0 5px 0 0;
-        -webkit-border-radius: 0 5px 0 0;
-        -moz-border-radius: 0 5px 0 0;
+        @include border-radius(0 5px 0 0);
       }
     }
   }
